--- a/css/creative.css
+++ b/css/creative.css
@@ -182,7 +182,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/yuppiecapoeira-header.jpg);
+    background-color: #000000;
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
