--- a/css/customized.css
+++ b/css/customized.css
@@ -52,12 +52,30 @@
   }
 }
 
+@-webkit-keyframes slide-left {
+  0% {
+    -webkit-transform: translate(0, 0);    
+  }
+  100% {
+    -webkit-transform: translate(-30%, 0px);
+  }
+}
+
 @keyframes slide-left-2x {
   0% {
     transform: translate(0, 0);    
   }
   100% {
     transform: translate(-60%, 0px);
+  }
+}
+
+@-webkit-keyframes slide-left-2x {
+  0% {
+    -webkit-transform: translate(0, 0);    
+  }
+  100% {
+    -webkit-transform: translate(-60%, 0px);
   }
 }
 
@@ -70,12 +88,30 @@
   }
 }
 
+@-webkit-keyframes slide-right {
+  0% {
+    -webkit-transform: translate(0, 0);    
+  }
+  100% {
+    -webkit-transform: translate(30%, 0px);
+  }
+}
+
 @keyframes slide-right-2x {
   0% {
     transform: translate(0, 0);    
   }
   100% {
     transform: translate(60%, 0px);
+  }
+}
+
+@-webkit-keyframes slide-right-2x {
+  0% {
+    -webkit-transform: translate(0, 0);    
+  }
+  100% {
+    -webkit-transform: translate(60%, 0px);
   }
 }
 
