--- a/css/customized.css
+++ b/css/customized.css
@@ -128,6 +128,13 @@
     -webkit-animation: bounce-icon 2s ease 2s alternate infinite;
 }
 
+.check-icon {
+    animation: roll 3s infinite;
+    -webkit-animation: roll 3s infinite;
+    transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+}
+
 @keyframes bounce-icon {
   0% {
     transform: translateY(0);
@@ -143,5 +150,23 @@
   }
   100% {
     -webkit-transform: translateY(5px);
+  }
+}
+
+@keyframes roll {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+ 
+@-webkit-keyframes roll {
+  0% {
+    -webkit-transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
   }
 }
